Implementacja przenoszenia rośliny do innej działki na frontendzie
